--- a/core/template/dashboard/scenario.html
+++ b/core/template/dashboard/scenario.html
@@ -1,15 +1,11 @@
 <div class="scenario scenario-widget allowResize" data-scenario_id="#id#" data-version="#version#" style="width: #width#;height: #height#;">
-  <center class="widget-name"><a href="#scenarioLink#" class="tooltips" title="{{Dernier lancement}} : #lastLaunch#">#name#</a></center>
-  <div class="#isVerticalAlign#">
-    <center>
-      <span class="iconCmd">#icon#</span>
-    </center>
-    <center>
-      <a class="btn btn-default btn-sm changeScenarioState tooltips" data-state="activate" title="{{Activer}}"><i class="fa fa-power-off"></i></a>
-      <a class="btn btn-default btn-sm changeScenarioState tooltips" data-state="deactivate" title="{{Desactiver}}"><i class="fa fa-power-off"></i></a>
-      <a class="btn btn-default btn-sm changeScenarioState" data-state="start"><i class="fa fa-play"></i></a>
-      <a class="btn btn-default btn-sm changeScenarioState" data-state="stop"><i class="fa fa-stop"></i></a>
-    </center>
+  <div class="widget-name">
+    <a style="font-size: 0.85em;color: #A52A2A !important;" class="ui-btn ui-mini ui-btn-inline waves-effect waves-button changeScenarioState" data-state="activate"><i class="fa fa-power-off"></i></a>
+    <a style="font-size: 0.85em;color: #7CFC00 !important;" class="ui-btn ui-mini ui-btn-inline waves-effect waves-button changeScenarioState" data-state="deactivate"><i class="fa fa-power-off"></i></a>
+    <a style="font-size: 0.85em;" class="ui-btn ui-mini ui-btn-inline waves-effect waves-button changeScenarioState" data-state="start"><i class="fa fa-play"></i></a>
+    <a style="font-size: 0.85em;" class="ui-btn ui-mini ui-btn-inline waves-effect waves-button changeScenarioState" data-state="stop"><i class="fa fa-stop"></i></a>
+	<a href="#scenarioLink#" class="tooltips" title="Dernier lancement : #lastLaunch#" style="position: absolute;left: 50px;">#name#</a>
+  <span class="state" style="color: #D3D3D3 !important;font-size: 1.00em;position: absolute;right: 10px;">#icon#</span>
   </div>
   <script>
     $('.scenario[data-scenario_id=#id#] .changeScenarioState').on('click', function() {
