fix connection ui

--- a/desktop/css/connection.css
+++ b/desktop/css/connection.css
@@ -6,7 +6,7 @@ body {
 	transition: all .5s;
 	background-image: linear-gradient(to bottom right, rgba(147,204,1,0.6), rgba(147,204,1,1));
 	padding-top: 0;
-	height: 100% !important;		
+	height: 100% !important;
 	overflow: hidden;
 }
 
@@ -87,9 +87,13 @@ body {
 .veen .wrapper > .form-group:focus{
   outline: none;
 }
+.veen .wrapper .submit {
+	padding-top: 10px !important;
+}
 .veen .wrapper #login{
 	padding-top: 20%;
 	visibility: visible;
+	text-align: left;
 }
 .veen .wrapper #market{
 	padding-top: 10%;
@@ -103,11 +107,11 @@ body {
 	transform: translateY(-120%) translateX(0%);
 	visibility: visible;
 }
-.veen .wrapper.move #login{
+.veen .wrapper.move #login {
 	transform: translateX(-100%);
 	visibility: hidden;
 }
-.veen .wrapper .checkbox{
+.veen .wrapper .checkbox {
 	width: 100%;
 	height: 10px;
 }
@@ -116,14 +120,11 @@ body {
 	margin-bottom: 15px;
 }
 .veen .wrapper label{
-	position: absolute;
-	top: -7px;
 	font-size: 12px;
 	white-space: nowrap;
 	background: #fff;
 	text-align: left;
-	left: 15px;
-	padding: 0 5px;
+	padding: 0 15px;
 	color: #999;
 	pointer-events: none;
 }
@@ -192,6 +193,12 @@ select:-webkit-autofill {
 @media (max-width: 1520px){
   .veen{
 		width: 80%;
+	}
+}
+
+@media (max-width: 1000px){
+  .veen .wrapper #login{
+		padding-top: 10px;
 	}
 }
 
