--- a/core/template/dashboard/cmd.action.message.default.html
+++ b/core/template/dashboard/cmd.action.message.default.html
@@ -7,7 +7,7 @@
   <template>
     <div>title : {{Titre par défaut}}.</div>
     <div>title_placeholder : {{Titre indicatif par défaut}}.</div>
-    <div>title_possibility_list : title1, title2 ({{autocomple}}).</div>
+    <div>title_possibility_list : title1, title2 ({{Autocomplete}}).</div>
     <div>title_disable : 1 ({{Ne pas afficher le champ titre}}).</div>
     <div>message_placeholder : {{Message indicatif par défaut}}.</div>
     <div>message : {{Message par défaut}}.</div>
