--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -1028,11 +1028,12 @@ div.ui-header.ui-bar-inherit > a[data-rel=back]{
 }
 
 #pre_globallog span {
-  height: 12px;
-  min-width: 50px;
+  height: 11px;
+  min-width: 55px;
   padding: 0 4px;
   display: inline-block;
   text-align: center;
+  line-height: 11px;
 }
 #pre_scenariolog label,
 #pre_scenariolog span {
