--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -921,20 +921,24 @@ Theme Core 2021 @Jeedom
   }
 
   .objectSummaryglobal > .objectSummaryParent,
-  span.objectDashLegend .objectSummaryContainer > .objectSummaryParent,
+  .objectSummaryContainer > .objectSummaryParent,
   #dashOverviewPrevSummaries .objectSummaryContainer > .objectSummaryParent {
     display: inline-flex;
     color: var(--txt-color) !important;
     margin: 0 2px;
   }
-  span.objectDashLegend .objectSummaryContainer > .objectSummaryParent {
+  objectSummaryContainer > .objectSummaryParent {
     font-size: 12px;
   }
   .objectSummaryglobal > .objectSummaryParent > sup,
-  span.objectDashLegend .objectSummaryContainer > .objectSummaryParent > sup,
+  .objectSummaryContainer > .objectSummaryParent > sup,
   #dashOverviewPrevSummaries .objectSummaryContainer > .objectSummaryParent > sup {
     margin: 0 2px;
     margin-top: 9px;
+  }
+
+  #dashOverviewPrev .objectSummaryContainer {
+    margin-left: 30px;
   }
 
   #dashOverviewPrevSummaries .objectSummaryContainer {
