Fix new sliders no state

--- a/core/template/dashboard/cmd.action.slider.shutter.html
+++ b/core/template/dashboard/cmd.action.slider.shutter.html
@@ -25,7 +25,7 @@
     var mySlider#id# = $.createWidgetSlider({
       sliderDiv: document.getElementById('widget_slider#id#'),
       vertical: true,
-      state: #state#,
+      state: ('#state#' == '') ? #minValue# : #state#,
       min: #minValue#,
       max: #maxValue#,
       step: step#id#,
