--- a/core/template/mobile/cmd.action.slider.tmplicon.html
+++ b/core/template/mobile/cmd.action.slider.tmplicon.html
@@ -12,7 +12,7 @@
     }
     var mySlider#id# = $.createWidgetSlider({
       sliderDiv: document.getElementById('widget_slider#id#'),
-      state: #state#,
+      state: ('#state#' == '') ? #minValue# : #state#,
       min: #minValue#,
       max: #maxValue#,
       step: step#id#,
