--- a/core/template/dashboard/cmd.action.slider.default.html
+++ b/core/template/dashboard/cmd.action.slider.default.html
@@ -16,7 +16,7 @@
     }
     var mySlider#id# = $.createWidgetSlider({
       sliderDiv: document.getElementById('widget_slider#id#'),
-      state: ('#state#' == '') ? #minValue# : #state#,
+      state: ('#state#' == '') ? #minValue# : '#state#',
       min: #minValue#,
       max: #maxValue#,
       step: step#id#,
