--- a/core/template/dashboard/cmd.action.slider.timeShutter.html
+++ b/core/template/dashboard/cmd.action.slider.timeShutter.html
@@ -27,7 +27,7 @@
     var mySlider#id# = $.createWidgetSlider({
       sliderDiv: document.getElementById('widget_slider#id#'),
       vertical: true,
-      state: ('#state#' == '') ? #minValue# : #state#,
+      state: ('#state#' == '') ? #minValue# : '#state#',
       min: #minValue#,
       max: #maxValue#,
       step: step#id#,
