--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -31,7 +31,7 @@
     if ('#noslider#' != '1') {
       var mySlider#id# = $.createWidgetSlider({
         sliderDiv: document.getElementById('widget_slider#id#'),
-        state: ('#state#' == '') ? #minValue# : #state#,
+        state: ('#state#' == '') ? #minValue# : '#state#',
         min: #minValue#,
         max: #maxValue#,
         step: step#id#,
