Synthesis background centering

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1,5 +1,6 @@
 /*
-Theme Core 2021 @Jeedom
+  Theme Core 2021 @Jeedom
+  Desktop
 */
 
 /* ______Commons */
@@ -951,6 +952,10 @@ Theme Core 2021 @Jeedom
   }
 
 /* ____________________OVERVIEW */
+  #objectOverviewContainer .objectPreview,
+  #dashOverviewPrev .objectPreview {
+    background-position: center !important;
+  }
   #objectOverviewContainer {
     text-align: center !important;
     margin:15px;
