--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1851,7 +1851,7 @@
     display: inline-flex !important;
     top: unset !important;
     font-size: 14px !important;
-    width: calc(100% - 70px) !important;
+    min-width: calc(100% - 70px) !important;
     min-height: 24px !important;
     max-height: 24px !important;
     height: 24px !important;
