--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4578,6 +4578,17 @@
     letter-spacing: 0.05em;
     line-height: 14px;
   }
+
+  #brutlogicon {
+    display: none;
+    position: relative;
+    top: 5px;
+    left: -7px;
+    font-size: 15px;
+  }
+  #brutlogcheck[autoswitch="1"]:checked + #brutlogicon {
+    display: inline-block;
+  }
   #pre_globallog,
   #pre_scenariolog,
   #pre_eventlog,
