stickyHead for tablesorter in modals

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -2838,6 +2838,11 @@
     top: 0;
     z-index: 5;
   }
+  table.tablesorter.stickyHead > thead {
+    position: sticky;
+    top: -14px;
+    z-index: 5;
+  }
 
   ul.nav.nav-tabs li,
   .nav-tabs > li > a {
