fix no coloredcats editoption

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -675,7 +675,8 @@
   }
   body[data-coloredcats="0"] div.eqLogic-widget .widget-name > .reportModeHidden,
   body[data-coloredcats="0"] div.scenario.scenario-widget .widget-name  > a,
-  body[data-coloredcats="0"] div.eqLogic-widget span.cmd.refresh > i {
+  body[data-coloredcats="0"] div.eqLogic-widget span.cmd.refresh > i,
+  body[data-coloredcats="0"] div.eqLogic-widget > span.cmd.editOptions:after {
     color: var(--link-color) !important;
   }
 
