fix widget template

--- a/core/template/dashboard/cmd.action.other.tmplimg.html
+++ b/core/template/dashboard/cmd.action.other.tmplimg.html
@@ -16,9 +16,9 @@
       var cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
         if ('#time#' == 'date') {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'), 'date')
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
         } else {
-          jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'))
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
         }
       } else {
         cmd.find('.timeCmd').parent().remove()
